# LlamaIndex-demo

./: blog.md  readme.md
llamaindex-demo/: .env  .env.example  README.md  pyproject.toml  run_examples.sh  test_ollama_simple.py  test_setup.py  web_app.py
llamaindex-demo/data/: sample_doc1.md  sample_doc2.md  sample_doc3.md
llamaindex-demo/examples/: basic_rag.py  evaluation_demo.py  intelligent_agent.py  local_rag.py  multimodal_demo.py
llamaindex-demo/src/: enterprise_kb.py  llm_factory.py
llamaindex-demo/src/llamaindex_demo/: __init__.py
